[package]
name = 'wgpu_tutorial'
version = '0.1.0'
edition = '2021'

[dependencies]
anyhow = '1.0'
bytemuck = {version = '1.12', features = ['derive']}
cgmath = '0.18'
env_logger = '0.10'
image = {version = '0.24', default-features = false, features = ['png', 'jpeg']}
log = '0.4'
pollster = '0.2'
wgpu = '0.15'
winit = '0.27'
